--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.13.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.7.2",
